# sales-discovery-bot

./: .env.example  .gitignore  BUILD_GUIDE.md  BUILD_MONITOR.md  BUILD_STATUS.md  Dockerfile  LESSONS_LEARNED.md  README.md  REPO_LAYOUT.md  STREAMING_STATUS.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: trigger.txt
.github/workflows/: build-dockerhub.yml  build.yml  docker-direct.yml  fixed-build.yml  ghcr-only.yml  ghcr-simple.yml  manual-ghcr.yml  test-build.yml  test-docker-login.yml  update-layout.yml
agent/: __init__.py  config.py  logic.py  prompts.py  state.py  tools.py
api/: __init__.py  database.py  main.py  models.py
docs/: DEVELOPMENT.md
jobs/: __init__.py  worker.py
k8s/: configmap.yaml  deployment.yaml  keda-scaler.yaml  namespace.yaml  service.yaml  vault-policy.hcl
monitoring/: alerts.yaml  dashboard.json
scripts/: init_db.py
tests/: __init__.py  test_integration.py  test_performance.py  test_unit.py
